# AIChallenge4Health

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  recreate_dataset.sh  requirements.txt  setup.py  test.sh  test.txt  train.sh  travis_deploy.sh
DataChallenge/: images_test.tiff  images_training.tiff
models/: basic_cnn.h5  image_cnn.h5
rescaling_cpp/: CMakeLists.txt  README.md
rescaling_cpp/src/: CMakeLists.txt  rescaling.cpp  rescaling.h
src/: answers.py  calculate_metrics.py  create_weights_yolo.py  extract_points.py  histogram_images.py  image.py  image_visualization.py  import_data.py  populate_train_test.py  read_results_yolo.py
src/models/: README.md  basic_cnn.py  example_random_model.py  image_cnn.py
tests/: output_yolo_csv.py  test_accuracy_classification.py  test_basic_cnn.py  test_error_classfication.py  test_image_cnn.py  test_metric.py  test_model_validity.py
